tests/NormalTests/paczka1/small_fuzzy/89749931.err
Error in line 3: YRkeu A580 42,3
Error in line 4: fjPz3HeZ5 A1 25,9
Error in line 7: fjPz3HeZ5 A237 65,5
